# rusve

./: .gitignore  README.md  docker-compose.app.yml  docker-compose.db.yml  docker-compose.yml  fly.toml  proto.sh  rust-grpc.excalidraw  rust-typescript-grpc.excalidraw  rusve.excalidraw  start-app.sh  start-db.sh  start.sh
.github/: FUNDING.yml
.github/workflows/: deploy-auth.yml  deploy-client.yml  deploy-fly.yml  deploy-gcp.yml  deploy-notes-go.yml  deploy-notes-rust.yml  deploy-notes.yml  deploy-oauth.yml  deploy-posts.yml  deploy-users-go.yml  deploy-users-rust.yml  deploy-users.yml  deploy-utils-go.yml  deploy-utils-rust.yml  deploy-utils.yml  deploy.yml  lint-auth.yml  lint-client.yml  lint-notes-go.yml  lint-notes-rust.yml  lint-notes.yml  lint-oauth.yml  lint-posts.yml  lint-server.yml  lint-users-go.yml  lint-users-rust.yml  lint-users.yml  lint-utils-go.yml  lint-utils-rust.yml  lint-utils.yml  pr.yml
client/: .dockerignore  .env  .env.dist  .env.example  .env.prod  .eslintignore  .eslintrc.cjs  .gitignore  .prettierrc  Dockerfile  eslint-report.json  fly.toml  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
client/src/: .service-worker.js  app.css  app.d.ts  app.html  grpc.ts  hooks.server.js  hooks.server.ts  service-workerr.js
client/static/: manifest.json
directus/: Dockerfile  fly.toml
docker/: Dockerfile.notes  Dockerfile.server  Dockerfile.users
proto/: Cargo.toml  files.proto  main.proto  notes.proto  package-lock.json  package.json  posts.proto  profile.proto  users.proto  utils.proto
proto/src/: main.rs
scripts/: keys.sh  private.key  rusve.excalidraw
server/: Cargo.toml  build.rs
server/service-notes/src/: proto.rs
server/service-users/: Cargo.toml
server/service-users/migrations/: 2_create-users-table.sql
server/service-users/src/: users_service.rs
server/src/: main.rs  notes_service.rs  proto.rs  utils.rs
service-auth/: Cargo.toml  Dockerfile
service-auth/src/: auth_db.rs  auth_oauth.rs  auth_service.rs  lib.rs  main.rs  migrations.rs  proto.rs
service-notes/: .env  Cargo.toml  Dockerfile  Dockerfile.dev  build.rs  fly.toml  public.key
service-notes-go/: Dockerfile  go.mod  go.sum  notes_main.go  notes_service.go  notes_utils.go
service-notes-go/migrations/: 1_create_notes_table.sql  2-create-notes-table.sql
service-notes-go/proto/: main.pb.go  main_grpc.pb.go  notes.pb.go  posts.pb.go
service-notes-go/src/: main.go  notes_main.go  notes_service.go
service-notes-rust/: Cargo.toml
service-notes-rust/migrations/: 2_create-notes-table.sql  V1__create_notes_table.sql
service-notes-rust/src/: lib.rs  main.rs  notes_db.rs  notes_service.rs  proto.rs  proto_build.rs
service-notes/migrations/: V1__create_notes_table.sql
service-notes/migrations/2023-05-22-210508_create_notes/: down.sql  up.sql
service-notes/src/: build.rs  db.rs  lib.rs  main.rs  migrations.rs  models.rs  note_db.rs  note_service.rs  note_validation.rs  notes_db.rs  notes_service.rs  notes_validation.rs  proto.rs  schema.rs  service.rs  utils.rs
service-oauth/: Cargo.toml  Dockerfile
service-oauth/src/: lib.rs  main.rs  migrations.rs  oauth_db.rs  oauth_http.rs  oauth_service.rs  proto.rs
service-posts/: Dockerfile  Dockerfile.dev  fly.toml  go.mod  go.sum  posts.main.go  posts.service.go  posts.utils.go  posts_main.go
service-posts/migrations/: 2-create-posts-table.sql
service-posts/proto/: main.pb.go  main_grpc.pb.go  notes.pb.go  posts.pb.go  users.pb.go  utils.pb.go
service-users/: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.dev  fly.toml  fly.toml-bck
service-users-go/: Dockerfile.dev  files_service.go  files_utils.go  go.mod  go.sum  users_main.go  users_service.go  users_utils.go
service-users-go/migrations/: 2-create-users-table.sql  2_create_users_table.sql  3-create-files-table.sql
service-users-go/proto/: main.pb.go  main_grpc.pb.go  notes.pb.go  users.pb.go  utils.pb.go
service-users-go/src/: emails_service.go  files_service.go  files_utils.go  main.go  users_service.go  users_utils.go
service-users-go/tls/: ca.key  server.key
service-users-rust/: Cargo.toml  Dockerfile  Dockerfile.dev
service-users-rust/migrations/: 2_create-users-table.sql  V1__create_users_table.sql
service-users-rust/migrations/2023-05-21-222223_create_users/: up.sql
service-users-rust/migrations/2023-06-04-190413_create_files/: up.sql
service-users-rust/src/: lib.rs  main.rs  proto.rs  users_service.rs  utils.rs
service-users-rust/src/tls/: server.pem
service-users-rust/tls/: ca.key  ca.pem  server.key
service-users/migrations/: 2_create-users-table.sql  3_add_payment_id.sql  3_test-user.sql
service-users/migrations/2023-05-21-222223_create_users/: up.sql
service-users/src/: build.rs  email_service.rs  files_db.rs  files_service.rs  grpc.rs  lib.rs  main.rs  migrations.rs  models.rs  profile_db.rs  profile_service.rs  profile_validation.rs  proto.rs  schema.rs  stripe_db.rs  stripe_service.rs  token_db.rs  user_db.rs  user_service.rs  users_db.rs  users_service.rs  utils.rs
service-utils/: .env  Cargo.toml  Dockerfile  Dockerfile.dev  fly.toml
service-utils-go/: Dockerfile  go.mod  go.sum
service-utils-go/proto/: main.pb.go  main_grpc.pb.go  notes.pb.go  users.pb.go  utils.pb.go
service-utils-go/src/: emails_service.go  files_service.go  files_utils.go  main.go
service-utils-rust/: Cargo.toml  Dockerfile
service-utils-rust/src/: email_service.rs  files_db.rs  files_service.rs  lib.rs  main.rs  models.rs  (+2 more)
service-utils/migrations/: 2_create-notes-table.sql  V1__create_files_table.sql
service-utils/migrations/2023-05-31-063708_create_files/: down.sql  up.sql
service-utils/src/: db.rs  email_db.rs  email_service.rs  email_utils.rs  email_validation.rs  emails.rs  emails_service.rs  file_db.rs  file_service.rs  file_utils.rs  files.rs  files_db.rs  files_service.rs  files_utils.rs  grpc.rs  lib.rs  main.rs  migrations.rs  models.rs  proto.rs  schema.rs  util_service.rs  utils.rs  utils_service.rs
(+201 files in other folders)
