[package]
name = "rusve-notes"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
# Server
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "sync" ] }
tokio-stream = "0.1.12"
futures-util = "0.3.28"
futures-core = "0.3.28"
anyhow = "1.0.69"

# gRPC
prost = "0.11.9"
tonic = "0.9.2"
tonic-build = "0.9.2"

# Utils
time = "0.3.20"
uuid = { version = "1.3.2", features = ["v7", "std"] }
dotenvy = "0.15.7"

# Database
diesel = { version = "2.1.0", features = ["mysql", "time", "uuid", "numeric"] }
diesel-async = { version = "0.3.1", features = ["mysql", "deadpool"] }
diesel_migrations = { version = "2.1.0", features = ["mysql"] }

# Mysql
mysql_async = "*"
