[package]
name = "rusve-users"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
prost = "0.11.9"
tonic = "0.9.2"
tonic-build = "0.9.2"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.12"
futures-core = "0.3.28"
futures-util = "0.3.28"

anyhow = "1.0.69"
time = "0.3.20"
uuid = "1.3.2"

# Database
diesel = { version = "2.1.0", features = ["postgres", "time", "uuid", "numeric"] }
dotenvy = "0.15.7"
diesel-async = { version = "0.3.0", features = ["postgres", "deadpool", "bb8"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }

# GCP
google-cloud-storage = "0.11.1"
google-cloud-default = { version = "0.3.0", features = ["storage", "pubsub"] }
google-cloud-pubsub = "0.15.0"
tokio-util = "0.7.8"
serde_json = "1.0.96"
serde = "1.0.163"
sendgrid = { version = "0.19.0", features = ["async"] }
