[package]
name = "rusve-users"
version = "0.1.0"
edition = "2021"

[dependencies]
# General
dotenvy = "0.15.7"
anyhow = "1.0.69"
time = "0.3.20"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.12"
futures-core = "0.3.28"
futures-util = "0.3.28"
serde_json = "1.0.96"
serde = "1.0.163"
jsonwebtoken = "8.3.0"
uuid = { version = "1.6.1", features = ["default", "v7"] }

# Trace
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# gRPC
prost = "0.11.9"
tonic = "0.9.2"
tonic-build = "0.9.2"

# Database
tokio-postgres = { version = "0.7.8", features = ["with-uuid-1", "with-time-0_3", "array-impls"] }
tokio-postgres-rustls = "0.10.0"
rustls = "0.21.5"
rustls-native-certs = "0.6.3"
deadpool-postgres = "0.10.5"

# Migration
refinery = { version = "0.8.10", features = ["tokio-postgres"] }
