[package]
name = "service-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
# Main
anyhow = "1.0"
time = "0.3"
uuid = { version = "1.3", features = ["default", "v7"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.3"

# Trace
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
tokio = { version = "1.28", features = ["rt-multi-thread", "macros", "sync" ] }
tokio-stream = "0.1"
futures-util = "0.3"
futures-core = "0.3"

# Database
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-time-0_3", "array-impls"] }
tokio-postgres-rustls = "0.10"
rustls = "0.21"
rustls-native-certs = "0.6"
deadpool-postgres = "0.10"

# gRPC
prost = "0.11"
tonic = "0.9"

# S3
rust-s3 = "0.33"

# Sendgrid
sendgrid = { version = "0.19", features = ["async"] }
