[package]
name = "rust-grpc-users"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-grpc-users"
path = "src/main.rs"

[dependencies]
prost = "0.11.6"
tonic = "0.8.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"

anyhow = "1.0.69"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "migrate", "postgres", "uuid", "time"] }
time = "0.3.17"

[build-dependencies]
tonic-build = "0.8"
